some new changes 17-04-2024

--- a/public/css/inner.css
+++ b/public/css/inner.css
@@ -2,7 +2,7 @@
 .main-heading {
     background-image: url(../images/faith-bg.png);
     background-position: top;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     height: 300px;
     display: flex;
